vendor/bifrost/tls/bindings/ssl.odin


	// SSL_SESSION_get0_peer returns the peer leaf certificate stored in
	// |session|.
	//
	// TODO(davidben): This should return a const X509 *.
	SSL_SESSION_get0_peer :: proc(session: ^SSL_SESSION) -> ^X509 ---

	// SSL_SESSION_get0_peer_certificates returns the peer certificate chain stored
	// in |session|, or NULL if the peer did not use certificates. This is the
	// unverified list of certificates as sent by the peer, not the final chain
	// built during verification. The caller does not take ownership of the result.
	SSL_SESSION_get0_peer_certificates :: proc(session: ^SSL_SESSION) -> ^stack_st_CRYPTO_BUFFER ---

	// SSL_SESSION_get0_signed_cert_timestamp_list sets |*out| and |*out_len| to
	// point to |*out_len| bytes of SCT information stored in |session|. This is
	// only valid for client sessions. The SCT information is a
	// SignedCertificateTimestampList (including the two leading length bytes). See
	// https://tools.ietf.org/html/rfc6962#section-3.3 If no SCT was received then
	// |*out_len| will be zero on return.
	//
	// WARNING: the returned data is not guaranteed to be well formed.
	SSL_SESSION_get0_signed_cert_timestamp_list :: proc(session: ^SSL_SESSION, out: ^^u8, out_len: ^c.size_t) ---

	// SSL_SESSION_get0_ocsp_response sets |*out| and |*out_len| to point to
	// |*out_len| bytes of an OCSP response from the server. This is the DER
	// encoding of an OCSPResponse type as defined in RFC 2560.
	//
	// WARNING: the returned data is not guaranteed to be well formed.
	SSL_SESSION_get0_ocsp_response :: proc(session: ^SSL_SESSION, out: ^^u8, out_len: ^c.size_t) ---
}

// SSL_MAX_MASTER_KEY_LENGTH is the maximum length of a master secret.
SSL_MAX_MASTER_KEY_LENGTH :: 48

@(default_calling_convention="c")
foreign lib {
	// SSL_SESSION_get_master_key writes up to |max_out| bytes of |session|'s secret
	// to |out| and returns the number of bytes written. If |max_out| is zero, it
	// returns the size of the secret.
	SSL_SESSION_get_master_key :: proc(session: ^SSL_SESSION, out: ^u8, max_out: c.size_t) -> c.size_t ---

	// SSL_SESSION_set_time sets |session|'s creation time to |time| and returns
	// |time|. This function may be useful in writing tests but otherwise should not
	// be used.
	SSL_SESSION_set_time :: proc(session: ^SSL_SESSION, time: u64) -> u64 ---

	// SSL_SESSION_set_timeout sets |session|'s timeout to |timeout| and returns
	// one. This function may be useful in writing tests but otherwise should not
	// be used.
	SSL_SESSION_set_timeout :: proc(session: ^SSL_SESSION, timeout: u32) -> u32 ---

	// SSL_SESSION_get0_id_context returns a pointer to a buffer containing
	// |session|'s session ID context (see |SSL_CTX_set_session_id_context|) and
	// sets |*out_len| to its length.
	SSL_SESSION_get0_id_context :: proc(session: ^SSL_SESSION, out_len: ^u32) -> ^u8 ---

	// SSL_SESSION_set1_id_context sets |session|'s session ID context (see
	// |SSL_CTX_set_session_id_context|) to |sid_ctx|. It returns one on success and
	// zero on error. This function may be useful in writing tests but otherwise
	// should not be used.
	SSL_SESSION_set1_id_context :: proc(session: ^SSL_SESSION, sid_ctx: ^u8, sid_ctx_len: c.size_t) -> i32 ---

	// SSL_SESSION_should_be_single_use returns one if |session| should be
	// single-use (TLS 1.3 and later) and zero otherwise.
	//
	// If this function returns one, clients retain multiple sessions and use each
	// only once. This prevents passive observers from correlating connections with
	// tickets. See RFC 8446, appendix C.4. If it returns zero, |session| cannot be
	// used without leaking a correlator.
	SSL_SESSION_should_be_single_use :: proc(session: ^SSL_SESSION) -> i32 ---

	// SSL_SESSION_is_resumable returns one if |session| is complete and contains a
	// session ID or ticket. It returns zero otherwise. Note this function does not
	// ensure |session| will be resumed. It may be expired, dropped by the server,
	// or associated with incompatible parameters.
	SSL_SESSION_is_resumable :: proc(session: ^SSL_SESSION) -> i32 ---

	// SSL_SESSION_has_ticket returns one if |session| has a ticket and zero
	// otherwise.
	SSL_SESSION_has_ticket :: proc(session: ^SSL_SESSION) -> i32 ---

	// SSL_SESSION_get0_ticket sets |*out_ticket| and |*out_len| to |session|'s
	// ticket, or NULL and zero if it does not have one. |out_ticket| may be NULL
	// if only the ticket length is needed.
	SSL_SESSION_get0_ticket :: proc(session: ^SSL_SESSION, out_ticket: ^^u8, out_len: ^c.size_t) ---

	// SSL_SESSION_set_ticket sets |session|'s ticket to |ticket|. It returns one on
	// success and zero on error. This function may be useful in writing tests but
	// otherwise should not be used.
	SSL_SESSION_set_ticket :: proc(session: ^SSL_SESSION, ticket: ^u8, ticket_len: c.size_t) -> i32 ---

	// SSL_SESSION_get_ticket_lifetime_hint returns ticket lifetime hint of
	// |session| in seconds or zero if none was set.
	SSL_SESSION_get_ticket_lifetime_hint :: proc(session: ^SSL_SESSION) -> u32 ---

	// SSL_SESSION_get0_cipher returns the cipher negotiated by the connection which
	// established |session|.
	//
	// Note that, in TLS 1.3, there is no guarantee that resumptions with |session|
	// will use that cipher. Prefer calling |SSL_get_current_cipher| on the |SSL|
	// instead.
	SSL_SESSION_get0_cipher :: proc(session: ^SSL_SESSION) -> ^SSL_CIPHER ---

	// SSL_SESSION_has_peer_sha256 returns one if |session| has a SHA-256 hash of
	// the peer's certificate retained and zero if the peer did not present a
	// certificate or if this was not enabled when |session| was created. See also
	// |SSL_CTX_set_retain_only_sha256_of_client_certs|.
	SSL_SESSION_has_peer_sha256 :: proc(session: ^SSL_SESSION) -> i32 ---

	// SSL_SESSION_get0_peer_sha256 sets |*out_ptr| and |*out_len| to the SHA-256
	// hash of the peer certificate retained in |session|, or NULL and zero if it
	// does not have one. See also |SSL_CTX_set_retain_only_sha256_of_client_certs|.
	SSL_SESSION_get0_peer_sha256 :: proc(session: ^SSL_SESSION, out_ptr: ^^u8, out_len: ^c.size_t) ---

	// SSL_SESSION_is_resumable_across_names returns one if |session| may be resumed
	// with any identity in the server certificate and zero otherwise. See
	// draft-ietf-tls-cross-sni-resumption.
	SSL_SESSION_is_resumable_across_names :: proc(session: ^SSL_SESSION) -> i32 ---
}

// Session caching.
//
// Session caching allows connections to be established more efficiently based
// on saved parameters from a previous connection, called a session (see
// |SSL_SESSION|). The client offers a saved session, using an opaque identifier
// from a previous connection. The server may accept the session, if it has the
// parameters available. Otherwise, it will decline and continue with a full
// handshake.
//
// This requires both the client and the server to retain session state. A
// client does so with a stateful session cache. A server may do the same or, if
// supported by both sides, statelessly using session tickets. For more
// information on the latter, see the next section.
//
// For a server, the library implements a built-in internal session cache as an
// in-memory hash table. Servers may also use |SSL_CTX_sess_set_get_cb| and
// |SSL_CTX_sess_set_new_cb| to implement a custom external session cache. In
// particular, this may be used to share a session cache between multiple
// servers in a large deployment. An external cache may be used in addition to
// or instead of the internal one. Use |SSL_CTX_set_session_cache_mode| to
// toggle the internal cache.
//
// For a client, the only option is an external session cache. Clients may use
// |SSL_CTX_sess_set_new_cb| to register a callback for when new sessions are
// available. These may be cached and, in subsequent compatible connections,
// configured with |SSL_set_session|.
//
// Note that offering or accepting a session short-circuits certificate
// verification and most parameter negotiation. Resuming sessions across
// different contexts may result in security failures and surprising
// behavior. For a typical client, this means sessions for different hosts must
// be cached under different keys. A client that connects to the same host with,
// e.g., different cipher suite settings or client certificates should also use
// separate session caches between those contexts. Servers should also partition
// session caches between SNI hosts with |SSL_CTX_set_session_id_context|.
//
// Note also, in TLS 1.2 and earlier, offering sessions allows passive observers
// to correlate different client connections. TLS 1.3 and later fix this,
// provided clients use sessions at most once. Session caches are managed by the
// caller in BoringSSL, so this must be implemented externally. See
// |SSL_SESSION_should_be_single_use| for details.

// SSL_SESS_CACHE_OFF disables all session caching.
SSL_SESS_CACHE_OFF :: 0x0000

// SSL_SESS_CACHE_CLIENT enables session caching for a client. The internal
// cache is never used on a client, so this only enables the callbacks.
SSL_SESS_CACHE_CLIENT :: 0x0001

// SSL_SESS_CACHE_SERVER enables session caching for a server.
SSL_SESS_CACHE_SERVER :: 0x0002

// SSL_SESS_CACHE_BOTH enables session caching for both client and server.
SSL_SESS_CACHE_BOTH :: (SSL_SESS_CACHE_CLIENT|SSL_SESS_CACHE_SERVER)

// SSL_SESS_CACHE_NO_AUTO_CLEAR disables automatically calling
// |SSL_CTX_flush_sessions| every 255 connections.
SSL_SESS_CACHE_NO_AUTO_CLEAR :: 0x0080

// SSL_SESS_CACHE_NO_INTERNAL_LOOKUP, on a server, disables looking up a session
// from the internal session cache.
SSL_SESS_CACHE_NO_INTERNAL_LOOKUP :: 0x0100

// SSL_SESS_CACHE_NO_INTERNAL_STORE, on a server, disables storing sessions in
// the internal session cache.
SSL_SESS_CACHE_NO_INTERNAL_STORE :: 0x0200

// SSL_SESS_CACHE_NO_INTERNAL, on a server, disables the internal session
// cache.
SSL_SESS_CACHE_NO_INTERNAL :: (SSL_SESS_CACHE_NO_INTERNAL_LOOKUP|SSL_SESS_CACHE_NO_INTERNAL_STORE)

@(default_calling_convention="c")
foreign lib {
	// SSL_set_session, for a client, configures |ssl| to offer to resume |session|
	// in the initial handshake and returns one. The caller retains ownership of
	// |session|. Note that configuring a session assumes the authentication in the
	// session is valid. For callers that wish to revalidate the session before
	// offering, see |SSL_SESSION_get0_peer_certificates|,
	// |SSL_SESSION_get0_signed_cert_timestamp_list|, and
	// |SSL_SESSION_get0_ocsp_response|.
	//
	// It is an error to call this function after the handshake has begun.
	SSL_set_session :: proc(ssl: ^SSL, session: ^SSL_SESSION) -> i32 ---
}

// SSL_DEFAULT_SESSION_TIMEOUT is the default lifetime, in seconds, of a
// session in TLS 1.2 or earlier. This is how long we are willing to use the
// secret to encrypt traffic without fresh key material.
SSL_DEFAULT_SESSION_TIMEOUT :: (2*60*60)

// SSL_DEFAULT_SESSION_PSK_DHE_TIMEOUT is the default lifetime, in seconds, of a
// session for TLS 1.3 psk_dhe_ke. This is how long we are willing to use the
// secret as an authenticator.
SSL_DEFAULT_SESSION_PSK_DHE_TIMEOUT :: (2*24*60*60)

// SSL_DEFAULT_SESSION_AUTH_TIMEOUT is the default non-renewable lifetime, in
// seconds, of a TLS 1.3 session. This is how long we are willing to trust the
// signature in the initial handshake.
SSL_DEFAULT_SESSION_AUTH_TIMEOUT :: (7*24*60*60)

@(default_calling_convention="c")
foreign lib {
	// SSL_CTX_set_timeout sets the lifetime, in seconds, of TLS 1.2 (or earlier)
	// sessions created in |ctx| to |timeout|.
	SSL_CTX_set_timeout :: proc(ctx: ^SSL_CTX, timeout: u32) -> u32 ---

	// SSL_CTX_set_session_psk_dhe_timeout sets the lifetime, in seconds, of TLS 1.3
	// sessions created in |ctx| to |timeout|.
	SSL_CTX_set_session_psk_dhe_timeout :: proc(ctx: ^SSL_CTX, timeout: u32) ---

	// SSL_CTX_get_timeout returns the lifetime, in seconds, of TLS 1.2 (or earlier)
	// sessions created in |ctx|.
	SSL_CTX_get_timeout :: proc(ctx: ^SSL_CTX) -> u32 ---
}
